[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/back.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites.png" type="Texture" id=2]
[ext_resource path="res://assets/through space.ogg" type="AudioStream" id=3]
[ext_resource path="res://paddle.gd" type="Script" id=5]
[ext_resource path="res://game.gd" type="Script" id=6]

[sub_resource type="CapsuleShape2D" id=3]
radius = 9.0
height = 22.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 131, 10.5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 18, 111 )

[node name="game" type="Node2D"]
script = ExtResource( 6 )

[node name="back" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="right_paddle" type="KinematicBody2D" parent="." groups=["paddle"]]
position = Vector2( 226, 108 )
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}
paddle = "right"

[node name="sprite" type="Sprite" parent="right_paddle"]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 19.9855, 0.905672, 20.5334, 41.8417 )

[node name="shape" type="CollisionShape2D" parent="right_paddle"]
position = Vector2( 2, 0 )
shape = SubResource( 3 )

[node name="left_paddle" type="KinematicBody2D" parent="." groups=["paddle"]]
position = Vector2( 39, 129 )
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="sprite" type="Sprite" parent="left_paddle"]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 1.38917, 0.711961, 17.434, 42.0354 )

[node name="shape" type="CollisionShape2D" parent="left_paddle"]
position = Vector2( -2, 0 )
shape = SubResource( 3 )

[node name="upper_wall" type="StaticBody2D" parent="."]
position = Vector2( 128, 7 )

[node name="shape" type="CollisionShape2D" parent="upper_wall"]
position = Vector2( 0, 0.5 )
shape = SubResource( 2 )

[node name="lower_wall" type="StaticBody2D" parent="."]
position = Vector2( 128, 217 )

[node name="shape" type="CollisionShape2D" parent="lower_wall"]
position = Vector2( 0, 0.5 )
shape = SubResource( 2 )

[node name="left_killzone" type="Area2D" parent="."]
position = Vector2( -27, 112 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="left_killzone"]
shape = SubResource( 4 )

[node name="right_killzone" type="Area2D" parent="."]
position = Vector2( 281, 112 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="right_killzone"]
shape = SubResource( 4 )

[node name="ball_start" type="Position2D" parent="."]
position = Vector2( 128, 110 )

[node name="bgm" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -8.072
autoplay = true

[connection signal="body_entered" from="left_killzone" to="." method="_on_left_killzone_body_entered"]
[connection signal="body_entered" from="right_killzone" to="." method="_on_right_killzone_body_entered"]
